option(DAO_MODULES_WEB_CGI "Build the \"cgi\" module which adds the HTTP_* globals to Dao." ON)
if(DAO_MODULES_WEB_CGI)
    add_library(dao_cgi SHARED cgi/dao_cgi.c)
    target_link_libraries(dao_cgi ${DAOLIB_TO_LINK})
    install(TARGETS dao_cgi DESTINATION "${DAO_MODULES_INSTALL_DIR}/web")
endif(DAO_MODULES_WEB_CGI)

option(DAO_MODULES_WEB_JSON "Build the \"json\" module which adds support for the JSON format to Dao." ON)
if(DAO_MODULES_WEB_JSON)
    add_library(dao_json SHARED json/dao_json.c)
    target_link_libraries(dao_json ${DAOLIB_TO_LINK})
    install(TARGETS dao_json DESTINATION "${DAO_MODULES_INSTALL_DIR}/web")
endif(DAO_MODULES_WEB_JSON)
